feat(discovery): implement EPMD scanning and node discovery
Core functionality:
- EPMD protocol client for querying node registry
- Concurrent network scanner for IP ranges
- Discovery orchestration with formatted output
- CLI with escript support
- 10 tests passing

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,10 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
+{escript_name, skjold}.
+{escript_main_app, skjold}.
+{escript_emu_args, "%%! -escript main skjold_cli\n"}.
+
 {shell, [
     %% {config, "config/sys.config"},
     {apps, [skjold]}
