--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,11 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-{escript_name, skjold}.
-{escript_main_app, skjold}.
-{escript_emu_args, "%%! -escript main skjold_cli\n"}.
+{escript_name, jeger}.
+{escript_main_app, jeger}.
+{escript_emu_args, "%%! -escript main jeger_cli\n"}.
 
 {shell, [
     %% {config, "config/sys.config"},
-    {apps, [skjold]}
+    {apps, [jeger]}
 ]}.
