ci: start EPMD daemon before running tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           otp-version: ${{ matrix.otp }}
           rebar3-version: '3.23'
+      - run: epmd -daemon
       - run: rebar3 compile
       - run: rebar3 eunit
       - run: rebar3 dialyzer
