--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,6 @@ jobs:
           rebar3-version: '3.23'
       - run: epmd -daemon
       - run: rebar3 compile
+      - run: rebar3 xref
       - run: rebar3 eunit
       - run: rebar3 dialyzer
