--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,13 @@
 {escript_main_app, jeger}.
 {escript_emu_args, "%%! -escript main jeger_cli\n"}.
 
+{xref_checks, [
+    undefined_function_calls,
+    undefined_functions,
+    deprecated_function_calls,
+    deprecated_functions
+]}.
+
 {shell, [
     %% {config, "config/sys.config"},
     {apps, [jeger]}
