--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
+{project_plugins, [rebar3_lint]}.
+
 {escript_name, jeger}.
 {escript_main_app, jeger}.
 {escript_emu_args, "%%! -escript main jeger_cli\n"}.
